# picopter

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  configure  configure.ac  main.cpp
src/: BTLEServer.cpp  BTLEServer.h  CraftProperties.h  DroneState.cpp  DroneState.h  EigenTypes.h  EventLoop.cpp  EventLoop.h  Makefile.am  Makefile.in  Motors.cpp  Motors.h  Quaternion.cpp  Quaternion.h  Simulation.cpp  Simulation.h  Timer.cpp  Timer.h  VariadicTable.h  drone.cpp  drone.h  dronecontrol.cpp  dronecontrol.h
src/ble/: bleserver.cpp  bleserver.h
src/math/: Integrator.cpp  Integrator.h  Integrators.cpp  Integrators.h  LowPassFilter.cpp  LowPassFilter.h  PIDController.cpp  PIDController.h  integrators  utils.cpp  utils.h
src/sensors/: ADXL345.cpp  ADXL345.h  BMP280.cpp  BMP280.h  HMC5883.cpp  HMC5883.h  ITG3200.cpp  ITG3200.h  SensorUtils.cpp  SensorUtils.h
